--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "purescript-fetch",
+  "name": "purescript-yoga-fetch",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
