--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
 
       - uses: actions/setup-node@v2
         with:
-          node-version: "14"
+          node-version: "17.5"
 
       - name: Cache PureScript dependencies
         uses: actions/cache@v2
@@ -36,4 +36,4 @@ jobs:
 
       - run: |
           npm install
-          spago -x test.dhall test
+          node --experimental-fetch test.js
